Add /inputs/active and /inputs/preview
